[tool.poetry]
name = "weather"
version = "0.1.0"
description = "This is an endpoint to check data from weather api"
authors = ["Victor Fernandes <victorfernandes.matias@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
loguru = "^0.5.3"
flask_caching = "^1.9.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
